--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -173,6 +173,7 @@ box-shadow:  1px 1px 2px #22262a,
     .box{
         border-radius: 1rem;
         display: flex;
+        flex-wrap: wrap;
         background-color: lighten($card_black_bg, 10%);
         margin-right: $info_padding;
     }
@@ -480,8 +481,8 @@ select, input{
     }
 }
 
-@media(max-width: 1280px){
-    .navbar{
+@media(max-width: 1200px){
+/*    .navbar{
         justify-content: center;
         .userid{
             display: none;
@@ -489,6 +490,12 @@ select, input{
         #startButton{
             width: 100%;
             margin: 5px;
+        }
+    }*/
+    .info{
+        @include flexRow;
+        #{&}_actions{
+            max-width: 100%;
         }
     }
     .mainArea{
@@ -504,18 +511,44 @@ select, input{
             align-items: center;
         }
     }
-    .info{
-        @include flexRow;
-        #{&}_actions{
-            max-width: 100%;
-        }
-    }
     #yourCards{
         justify-content: center;
     }
-    .card{
+    /*.card{
         width: $card_width_smol;
         min-height: $card_width_smol*1.2;
+    }*/
+  }
+
+  @media(max-width: 768px){
+    .navbar{
+        justify-content: center;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+
+        .userid{
+            display: none;
+        }
+        #startButton{
+            width: 100%;
+            margin: 5px;
+        }
+    }
+    .mainArea{
+        padding-bottom: 0.5em;
+    }
+    #yourCards{
+        padding: 0.5em;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    .card{
+        width: $card_width_mini;
+        min-height: $card_width_mini*1.2;
+        padding: 0.5em;
+    }
+    .hidden{
+        display: none;
     }
   }
   
