--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,8 @@ $card_margin: 0.13em;
 
 $card_width_smol: 8em;
 
+$card_width_mini: 7.1em;
+
 $card_width_big: 11em;
 $card_margin_big: 0.16em;
 $card_font_size: 1rem;
