--- a/src/css/main.css
+++ b/src/css/main.css
@@ -162,6 +162,7 @@ button {
 
 .mainArea .box {
   border-radius: 1rem;
+  margin-bottom: 1em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
